feat: include bootstrap

--- a/course/index.html
+++ b/course/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../images/icon.png" />
-    <link rel="stylesheet" href="course.css" />
+    <link rel="shortcut icon" href="../resource/images/icon.png" />
+    <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="../resource/css/bootstrap.css">
     <title>Import实战课程</title>
   </head>
   <body>
@@ -16,7 +17,7 @@
     <nav class="w">
       <!-- 左侧logo -->
       <div class="logo">
-        <img src="../images/logo.png" alt="Logo" />
+        <img src="../resource/images/logo.png" alt="Logo" />
       </div>
       <!-- 搜索图标 -->
       <div class="search">
@@ -62,7 +63,11 @@
       </ul>
     </nav>
     <!-- 导航栏End -->
+    <!-- 轮播图Start -->
+
+    <!-- 轮播图End -->
 
     <script src="course.js"></script>
+    <script src="../resource/js/bootstrap.js"></script>
   </body>
 </html>
