feat: add icon font

--- a/course/index.html
+++ b/course/index.html
@@ -21,9 +21,7 @@
         <img src="../resource/images/logo.png" alt="Logo" />
       </div>
       <!-- 搜索图标 -->
-      <div class="search">
-        <i></i>
-      </div>
+      <div class="search"></div>
       <!-- 信息栏 -->
       <ul class="info">
         <li>
@@ -137,7 +135,25 @@
       </div>
     </div>
     <!-- 轮播图End -->
-
+    <!-- 课程板块Start -->
+    <div class="course w">
+      <ul>
+        <li>
+          <div class="course-img">
+            <div class="tag">体验课</div>
+            <img src="../resource/images/course1.png" alt="course">
+          </div>
+          <h3>Python常用语法</h3>
+          <span>
+            <i class="date">11月26日开课 | </i>
+            <i class="students">1126已报名</i>
+            <i class="star">评分:aaaaa</i>
+          </span>
+        </li>
+        <li class="no-margin"></li>
+      </ul>
+    </div>
+    <!-- 课程板块End -->
     <script src="course.js"></script>
     <script src="../resource/js/bootstrap.js"></script>
   </body>
