--- a/course/index.html
+++ b/course/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../resource/images/icon.png" />
     <link rel="stylesheet" href="../resource/css/bootstrap.css" />
     <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="course.css">
+    <link rel="stylesheet" href="course.css" />
     <title>Import实战课程</title>
   </head>
   <body>
@@ -141,16 +141,63 @@
         <li>
           <div class="course-img">
             <div class="tag">体验课</div>
-            <img src="../resource/images/course1.png" alt="course">
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/course1.png" alt="course" />
+            </a>
           </div>
-          <h3>Python常用语法</h3>
+          <h3><a href="#1">Python常用语法</a></h3>
           <span>
             <i class="date">11月26日开课 | </i>
             <i class="students">1126已报名</i>
-            <i class="star">评分:aaaaa</i>
+            <i class="star">评分: </i>
           </span>
         </li>
-        <li class="no-margin"></li>
+        <li class="no-margin">
+          <div class="course-img">
+            <div class="tag">体验课</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/course2.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">Python进阶语法</a></h3>
+          <span>
+            <i class="date">12月30日开课 | </i>
+            <i class="students">489已报名</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li>
+          <div class="course-img">
+            <div class="tag">体验课</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/course2.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">Python进阶语法</a></h3>
+          <span>
+            <i class="date">12月30日开课 | </i>
+            <i class="students">489已报名</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li class="no-margin">
+          <div class="course-img">
+            <div class="tag">体验课</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/course1.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">Python常用语法</a></h3>
+          <span>
+            <i class="date">11月26日开课 | </i>
+            <i class="students">1126已报名</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
       </ul>
     </div>
     <!-- 课程板块End -->
