feat: add MORE component

--- a/course/index.html
+++ b/course/index.html
@@ -136,7 +136,7 @@
     </div>
     <!-- 轮播图End -->
     <!-- 课程板块Start -->
-    <div class="course w">
+    <div class="course w clearfix">
       <ul>
         <li>
           <div class="course-img">
@@ -201,6 +201,12 @@
       </ul>
     </div>
     <!-- 课程板块End -->
+    <!-- 更多Start -->
+    <a class="showmore w">
+      MORE
+      <i></i>
+    </a>
+    <!-- 更多End -->
     <script src="course.js"></script>
     <script src="../resource/js/bootstrap.js"></script>
   </body>
