feat: add footer component

--- a/course/index.html
+++ b/course/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../resource/css/bootstrap.css" />
     <link rel="stylesheet" href="nav.css" />
     <link rel="stylesheet" href="course.css" />
+    <link rel="stylesheet" href="footer.css" />
     <title>Import实战课程</title>
   </head>
   <body>
@@ -207,7 +208,16 @@
       <i></i>
     </a>
     <!-- 更多End -->
-    <script src="course.js"></script>
+    <!-- Footer Start -->
+    <footer>
+      <h3>关于我们</h3>
+      <div class="signup">
+        <input type="text">
+        <button>Sing Up</button>
+      </div>
+    </footer>
+    <!-- Footer End -->
+    <script src="nav.js"></script>
     <script src="../resource/js/bootstrap.js"></script>
   </body>
 </html>
