--- a/course/index.html
+++ b/course/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../resource/css/bootstrap.css" />
     <link rel="stylesheet" href="nav.css" />
     <link rel="stylesheet" href="course.css" />
-    <link rel="stylesheet" href="../resource/footer.css" />
+    <link rel="stylesheet" href="footer.css" />
     <title>Import实战课程</title>
   </head>
   <body>
