调整文件位置

--- a/practice/index.html
+++ b/practice/index.html
@@ -5,12 +5,64 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../resource/images/icon.png" />
-  <link rel="stylesheet" href="nav.css" />
+  <link rel="stylesheet" href="../resource/nav.css" />
   <link rel="stylesheet" href="practice.css" />
-  <link rel="stylesheet" href="footer.css" />
+  <link rel="stylesheet" href="../resource/footer.css" />
   <title>Import练习平台</title>
 </head>
 <body>
-  <script src="nav.js"></script>
+   <!-- 导航栏Start -->
+    <!-- 左侧多出的蓝色背景 -->
+    <!-- 此处使用JS控制背景宽度 -->
+    <div class="left-background"></div>
+    <nav class="w">
+      <!-- 左侧logo -->
+      <div class="logo">
+        <img src="../resource/images/logo.png" alt="Logo" />
+      </div>
+      <!-- 搜索图标 -->
+      <div class="search"></div>
+      <!-- 信息栏 -->
+      <ul class="info">
+        <li>
+          <a href="#">关于我们</a>
+        </li>
+        <li>
+          <a href="#">技术合作</a>
+        </li>
+        <li>
+          <a href="#">人才推广</a>
+        </li>
+      </ul>
+      <!-- 三个点(更多) -->
+      <span class="more">∙∙∙</span>
+      <!-- 页面导航 -->
+      <ul class="page">
+        <li>
+          <a href="#">开源专区</a>
+        </li>
+        <li>
+          <a href="#">广告产品</a>
+        </li>
+        <li>
+          <a href="#">新闻资讯</a>
+        </li>
+        <li>
+          <a href="#">编程比赛</a>
+        </li>
+        <li>
+          <a href="#">用户社群</a>
+        </li>
+        <li class="current">
+          <a href="#">练习平台</a>
+        </li>
+        <li>
+          <a href="#">实战课程</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- 导航栏End -->
+
+  <script src="../resource/nav.js"></script>
 </body>
 </html>
