--- a/course/index.html
+++ b/course/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../resource/images/icon.png" />
     <link rel="stylesheet" href="../resource/css/bootstrap.css" />
-    <link rel="stylesheet" href="nav.css" />
+    <link rel="stylesheet" href="../resource/nav.css" />
     <link rel="stylesheet" href="course.css" />
-    <link rel="stylesheet" href="footer.css" />
+    <link rel="stylesheet" href="../resource/footer.css" />
     <title>Import实战课程</title>
   </head>
   <body>
@@ -217,7 +217,7 @@
       </div>
     </footer>
     <!-- Footer End -->
-    <script src="nav.js"></script>
+    <script src="../resource/nav.js"></script>
     <script src="../resource/js/bootstrap.js"></script>
   </body>
 </html>
