--- a/practice/index.html
+++ b/practice/index.html
@@ -39,25 +39,25 @@
       <!-- 页面导航 -->
       <ul class="page">
         <li>
-          <a href="#">开源专区</a>
+          <a href="../opensource/index.html">开源专区</a>
         </li>
         <li>
-          <a href="#">广告产品</a>
+          <a href="../product/index.html">广告产品</a>
         </li>
         <li>
-          <a href="#">新闻资讯</a>
+          <a href="../news/index.html">新闻资讯</a>
         </li>
         <li>
-          <a href="#">编程比赛</a>
+          <a href="../competition/index.html">编程比赛</a>
         </li>
         <li>
-          <a href="#">用户社群</a>
+          <a href="../community/index.html">用户社群</a>
         </li>
         <li class="current">
-          <a href="#">练习平台</a>
+          <a href="../practice/index.html">练习平台</a>
         </li>
         <li>
-          <a href="#">实战课程</a>
+          <a href="../course/index.html">实战课程</a>
         </li>
       </ul>
     </nav>
