feat: 更新导航栏

--- a/practice/index.html
+++ b/practice/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../resource/images/icon.png" />
   <link rel="stylesheet" href="../resource/nav.css" />
+  <link rel="stylesheet" href="../resource/nav-edit.css">
   <link rel="stylesheet" href="practice.css" />
   <link rel="stylesheet" href="../resource/footer.css" />
   <title>Import练习平台</title>
@@ -61,8 +62,10 @@
         </li>
       </ul>
     </nav>
+    <!-- 补全右侧的空白 -->
+    <div class="right-background"></div>
     <!-- 导航栏End -->
 
-  <script src="../resource/nav.js"></script>
+  <script src="../resource/nav-edit.js"></script>
 </body>
 </html>
