--- a/practice/index.html
+++ b/practice/index.html
@@ -69,8 +69,19 @@
     </div>
 
     <!-- 头图Start -->
-    <div class="topImg w"></div>
+    <a href="#" class="topImg w">
+      <div class="mask"></div>
+      <div class="tag">大咖分享课</div>
+      <h1>黑马程序员Python学习经验分享</h1>
+      <span>
+        <i class="date">1月12日开讲 |</i>
+        <i class="students">759人已报名</i>
+      </span>
+    </a>
     <!-- 头图End -->
+    <!-- More Start -->
+    
+    <!-- More End -->
 
     <script src="../resource/nav-edit.js"></script>
   </body>
