--- a/practice/index.html
+++ b/practice/index.html
@@ -80,7 +80,10 @@
     </a>
     <!-- 头图End -->
     <!-- More Start -->
-    
+    <a class="showmore w">
+      MORE
+      <i></i>
+    </a>
     <!-- More End -->
 
     <script src="../resource/nav-edit.js"></script>
