--- a/practice/index.html
+++ b/practice/index.html
@@ -85,7 +85,95 @@
       <i></i>
     </a>
     <!-- More End -->
-
+    <!-- 练习模块 Start -->
+    <div class="practice w clearfix">
+      <ul>
+        <li>
+          <div class="practice-img">
+            <div class="tag">Basic</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice1.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">基础练习</a></h3>
+          <span>
+            <i class="students">12635人已学习</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li>
+          <div class="practice-img">
+            <div class="tag">Advanced</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice2.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">进阶练习</a></h3>
+          <span>
+            <i class="students">12635人已学习</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li class="no-margin">
+          <div class="practice-img">
+            <div class="tag">Practice</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice3.png" />
+            </a>
+          </div>
+          <h3><a href="#1">项目实战</a></h3>
+          <span>
+            <i class="students">12635人已学习</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li>
+          <div class="practice-img">
+            <div class="tag">Contest</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice4.png" />
+            </a>
+          </div>
+          <h3><a href="#1">比赛真题</a></h3>
+          <span>
+            <i class="students">12635人已学习</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li>
+          <div class="practice-img">
+            <div class="tag">Bonus</div>
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice5.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">积分奖励</a></h3>
+          <span>
+            <i class="students">12635人已学习</i>
+            <i class="star">评分: </i>
+          </span>
+        </li>
+        <li class="no-margin">
+          <div class="practice-img">
+            <a href="#1">
+              <div class="mask"></div>
+              <img src="../resource/images/practice/practice6.png" alt="course" />
+            </a>
+          </div>
+          <h3><a href="#1">更多/其他</a></h3>
+          <span>
+            <i class="star">更多练习课题</i>
+          </span>
+        </li>
+        
+      </ul>
+    </div>
+    <!-- 练习模块 End -->
     <script src="../resource/nav-edit.js"></script>
   </body>
 </html>
