feat:  add footer

--- a/practice/index.html
+++ b/practice/index.html
@@ -170,10 +170,18 @@
             <i class="star">更多练习课题</i>
           </span>
         </li>
-        
       </ul>
     </div>
     <!-- 练习模块 End -->
+    <!-- Footer Start -->
+    <footer>
+      <h3>关于我们</h3>
+      <div class="signup">
+        <input type="text">
+        <button>Sing Up</button>
+      </div>
+    </footer>
+    <!-- Footer End -->
     <script src="../resource/nav-edit.js"></script>
   </body>
 </html>
