feat: 社区布局完成

--- a/community/index.html
+++ b/community/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="../resource/images/icon.png" />
-  <link rel="stylesheet" href="../resource/nav.css" />
-  <link rel="stylesheet" href="../resource/nav-edit.css" />
-  <link rel="stylesheet" href="community.css" />
-  <link rel="stylesheet" href="../resource/footer.css" />
-  <title>Import用户社区</title>
-</head>
-<body>
-      <!-- 导航栏Start -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../resource/images/icon.png" />
+    <link rel="stylesheet" href="../resource/nav.css" />
+    <link rel="stylesheet" href="../resource/nav-edit.css" />
+    <link rel="stylesheet" href="community.css" />
+    <link rel="stylesheet" href="../resource/footer.css" />
+    <title>Import用户社区</title>
+  </head>
+  <body>
+    <!-- 导航栏Start -->
     <!-- 左侧多出的蓝色背景 -->
     <!-- 此处使用JS控制背景宽度 -->
     <div class="topbar clearfix">
@@ -65,10 +65,309 @@
       </nav>
       <!-- 补全右侧的空白 -->
       <div class="right-background"></div>
-      <!-- 导航栏End -->
-      
+    </div>
+    <!-- 导航栏End -->
+    <!-- 群板块标题 Start -->
+    <div class="group w">
+      <div>社区兴趣群</div>
+    </div>
+    <!-- 群板块标题 End -->
+    <!-- 留言板块 Start -->
+    <div class="banner topBanner">
+      <div class="w">
+        <!-- 左侧 Start -->
+        <div class="left">
+          <ul>
+            <li data-index="0">
+              <a class="selected">最新</a>
+            </li>
+            <li data-index="1">
+              <a>最热</a>
+            </li>
+            <li data-index="2">
+              <a>关注</a>
+            </li>
+            <li>
+              <a>发帖</a>
+            </li>
+            <li class="last">
+              <a>建立</a>
+            </li>
+          </ul>
+        </div>
+        <!-- 左侧 End -->
+        <!-- 右侧 Start -->
+        <div class="right">
+          <!-- index0 -->
+          <div id="0">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- index1 -->
+          <div id="1" class="hidden">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- index2 -->
+          <div id="1" class="hidden">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- More Start -->
+          <!-- More End -->
+        </div>
+        <!-- 右侧 End -->
+      </div>
+    </div>
+    <!-- 留言板块 End -->
+     <!-- 群板块标题 Start -->
+     <div class="group w">
+      <div>高校交流群</div>
+    </div>
+    <!-- 群板块标题 End -->
+    <!-- 留言板块 Start -->
+    <div class="banner topBanner">
+      <div class="w">
+        <!-- 左侧 Start -->
+        <div class="left">
+          <ul>
+            <li data-index="3">
+              <a class="selected">最新</a>
+            </li>
+            <li data-index="4">
+              <a>最热</a>
+            </li>
+            <li data-index="5">
+              <a>关注</a>
+            </li>
+            <li>
+              <a>发帖</a>
+            </li>
+            <li class="last">
+              <a>建立</a>
+            </li>
+          </ul>
+        </div>
+        <!-- 左侧 End -->
+        <!-- 右侧 Start -->
+        <!-- Index3 -->
+        <div class="right">
+          <!-- index0 -->
+          <div id="3">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- index4 -->
+          <div id="4" class="hidden">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- index5 -->
+          <div id="5" class="hidden">
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait1.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">项目运行之后不显示HttpResponse的内容</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+            <div class="comment">
+              <img
+                src="../resource/images/community/portrait2.png"
+                alt="portrait"
+              />
+              <div class="detail">
+                <a href="#1">find_packages eigen 失败</a>
+                <span>
+                  <i class="user">Jbhusn25462</i>
+                  <i class="date">一天前</i>
+                </span>
+              </div>
+              <div class="info">
+                <span class="view">浏览2546</span>
+                <span class="discuss">评论127</span>
+              </div>
+            </div>
+          </div>
+          <!-- More Start -->
+          <!-- More End -->
+        </div>
+        <!-- 右侧 End -->
+      </div>
+    </div>
+    <!-- 留言板块 End -->
 
-  <script src="community.js"></script>
-  <script src="../resource/nav-edit.js"></script>
-</body>
+    <script src="community.js"></script>
+    <script src="../resource/nav-edit.js"></script>
+  </body>
 </html>
