--- a/practice/index.html
+++ b/practice/index.html
@@ -65,8 +65,8 @@
       </nav>
       <!-- 补全右侧的空白 -->
       <div class="right-background"></div>
-      <!-- 导航栏End -->
     </div>
+    <!-- 导航栏End -->
 
     <!-- 头图Start -->
     <a href="#" class="topImg w">
@@ -93,7 +93,10 @@
             <div class="tag">Basic</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/practice/practice1.png" alt="course" />
+              <img
+                src="../resource/images/practice/practice1.png"
+                alt="course"
+              />
             </a>
           </div>
           <h3><a href="#1">基础练习</a></h3>
@@ -107,7 +110,10 @@
             <div class="tag">Advanced</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/practice/practice2.png" alt="course" />
+              <img
+                src="../resource/images/practice/practice2.png"
+                alt="course"
+              />
             </a>
           </div>
           <h3><a href="#1">进阶练习</a></h3>
@@ -149,7 +155,10 @@
             <div class="tag">Bonus</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/practice/practice5.png" alt="course" />
+              <img
+                src="../resource/images/practice/practice5.png"
+                alt="course"
+              />
             </a>
           </div>
           <h3><a href="#1">积分奖励</a></h3>
@@ -162,7 +171,10 @@
           <div class="practice-img">
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/practice/practice6.png" alt="course" />
+              <img
+                src="../resource/images/practice/practice6.png"
+                alt="course"
+              />
             </a>
           </div>
           <h3><a href="#1">更多/其他</a></h3>
@@ -177,7 +189,7 @@
     <footer>
       <h3>关于我们</h3>
       <div class="signup">
-        <input type="text">
+        <input type="text" />
         <button>Sing Up</button>
       </div>
     </footer>
