feat: 添加评论区切换

--- a/community/index.html
+++ b/community/index.html
@@ -99,7 +99,7 @@
         <!-- 右侧 Start -->
         <div class="right">
           <!-- index0 -->
-          <div id="0">
+          <div id="0" class="comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
@@ -136,7 +136,7 @@
             </div>
           </div>
           <!-- index1 -->
-          <div id="1" class="hidden">
+          <div id="1" class="hidden comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
@@ -173,7 +173,7 @@
             </div>
           </div>
           <!-- index2 -->
-          <div id="1" class="hidden">
+          <div id="1" class="hidden comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
@@ -216,13 +216,13 @@
       </div>
     </div>
     <!-- 留言板块 End -->
-     <!-- 群板块标题 Start -->
-     <div class="group w">
+    <!-- 群板块标题 Start -->
+    <div class="group w">
       <div>高校交流群</div>
     </div>
     <!-- 群板块标题 End -->
     <!-- 留言板块 Start -->
-    <div class="banner topBanner">
+    <div class="banner bottomBanner">
       <div class="w">
         <!-- 左侧 Start -->
         <div class="left">
@@ -249,7 +249,7 @@
         <!-- Index3 -->
         <div class="right">
           <!-- index0 -->
-          <div id="3">
+          <div id="3" class="comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
@@ -286,7 +286,7 @@
             </div>
           </div>
           <!-- index4 -->
-          <div id="4" class="hidden">
+          <div id="4" class="hidden comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
@@ -323,7 +323,7 @@
             </div>
           </div>
           <!-- index5 -->
-          <div id="5" class="hidden">
+          <div id="5" class="hidden comment_box">
             <div class="comment">
               <img
                 src="../resource/images/community/portrait1.png"
