--- a/community/index.html
+++ b/community/index.html
@@ -88,9 +88,9 @@
               <a>关注</a>
             </li>
             <li>
-              <a>发帖</a>
+              <a href="#1" class="btn">发帖</a>
             </li>
-            <li class="last">
+            <li class="last btn" href="#1">
               <a>建立</a>
             </li>
           </ul>
@@ -210,6 +210,10 @@
             </div>
           </div>
           <!-- More Start -->
+          <a class="showmore">
+            MORE
+            <i></i>
+          </a>
           <!-- More End -->
         </div>
         <!-- 右侧 End -->
@@ -236,10 +240,10 @@
             <li data-index="5">
               <a>关注</a>
             </li>
-            <li>
+            <li class="btn" href="#1">
               <a>发帖</a>
             </li>
-            <li class="last">
+            <li class="last btn" href="#1">
               <a>建立</a>
             </li>
           </ul>
@@ -360,13 +364,25 @@
             </div>
           </div>
           <!-- More Start -->
+          <a class="showmore">
+            MORE
+            <i></i>
+          </a>
           <!-- More End -->
         </div>
         <!-- 右侧 End -->
       </div>
     </div>
     <!-- 留言板块 End -->
-
+    <!-- Footer Start -->
+    <footer>
+      <h3>关于我们</h3>
+      <div class="signup">
+        <input type="text" />
+        <button>Sing Up</button>
+      </div>
+    </footer>
+    <!-- Footer End -->
     <script src="community.js"></script>
     <script src="../resource/nav-edit.js"></script>
   </body>
