fix: 修改目录结构

--- a/community/index.html
+++ b/community/index.html
@@ -59,7 +59,7 @@
             <a href="../practice/index.html">练习平台</a>
           </li>
           <li>
-            <a href="../course/index.html">实战课程</a>
+            <a href="../index.html">实战课程</a>
           </li>
         </ul>
       </nav>
