--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="../resource/images/icon.png" />
-    <link rel="stylesheet" href="../resource/css/bootstrap.css" />
-    <link rel="stylesheet" href="../resource/nav.css" />
+    <link rel="shortcut icon" href="./resource/images/icon.png" />
+    <link rel="stylesheet" href="./resource/css/bootstrap.css" />
+    <link rel="stylesheet" href="./resource/nav.css" />
     <link rel="stylesheet" href="course.css" />
-    <link rel="stylesheet" href="../resource/footer.css" />
+    <link rel="stylesheet" href="./resource/footer.css" />
     <title>Import实战课程</title>
   </head>
   <body>
@@ -19,7 +19,7 @@
     <nav class="w">
       <!-- 左侧logo -->
       <div class="logo">
-        <img src="../resource/images/logo.png" alt="Logo" />
+        <img src="./resource/images/logo.png" alt="Logo" />
       </div>
       <!-- 搜索图标 -->
       <div class="search"></div>
@@ -40,25 +40,25 @@
       <!-- 页面导航 -->
       <ul class="page">
         <li>
-          <a href="../opensource/index.html">开源专区</a>
+          <a href="./opensource/index.html">开源专区</a>
         </li>
         <li>
-          <a href="../product/index.html">广告产品</a>
+          <a href="./product/index.html">广告产品</a>
         </li>
         <li>
-          <a href="../news/index.html">新闻资讯</a>
+          <a href="./news/index.html">新闻资讯</a>
         </li>
         <li>
-          <a href="../competition/index.html">编程比赛</a>
+          <a href="./competition/index.html">编程比赛</a>
         </li>
         <li>
-          <a href="../community/index.html">用户社群</a>
+          <a href="./community/index.html">用户社群</a>
         </li>
         <li>
-          <a href="../practice/index.html">练习平台</a>
+          <a href="./practice/index.html">练习平台</a>
         </li>
         <li class="current">
-          <a href="../course/index.html">实战课程</a>
+          <a href="./index.html">实战课程</a>
         </li>
       </ul>
     </nav>
@@ -95,21 +95,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="../resource/images/course/poster1.png"
+              src="./resource/images/course/poster1.png"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="../resource/images/course/poster1.png"
+              src="./resource/images/course/poster1.png"
               class="d-block w-100"
               alt="..."
             />
           </div>
           <div class="carousel-item">
             <img
-              src="../resource/images/course/poster1.png"
+              src="./resource/images/course/poster1.png"
               class="d-block w-100"
               alt="..."
             />
@@ -144,7 +144,7 @@
             <div class="tag">体验课</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/course/course1.png" alt="course" />
+              <img src="./resource/images/course/course1.png" alt="course" />
             </a>
           </div>
           <h3><a href="#1">Python常用语法</a></h3>
@@ -159,7 +159,7 @@
             <div class="tag">体验课</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/course/course2.png" alt="course" />
+              <img src="./resource/images/course/course2.png" alt="course" />
             </a>
           </div>
           <h3><a href="#1">Python进阶语法</a></h3>
@@ -174,7 +174,7 @@
             <div class="tag">体验课</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/course/course2.png" alt="course" />
+              <img src="./resource/images/course/course2.png" alt="course" />
             </a>
           </div>
           <h3><a href="#1">Python进阶语法</a></h3>
@@ -189,7 +189,7 @@
             <div class="tag">体验课</div>
             <a href="#1">
               <div class="mask"></div>
-              <img src="../resource/images/course/course1.png" alt="course" />
+              <img src="./resource/images/course/course1.png" alt="course" />
             </a>
           </div>
           <h3><a href="#1">Python常用语法</a></h3>
@@ -217,7 +217,7 @@
       </div>
     </footer>
     <!-- Footer End -->
-    <script src="../resource/nav.js"></script>
-    <script src="../resource/js/bootstrap.js"></script>
+    <script src="./resource/nav.js"></script>
+    <script src="./resource/js/bootstrap.js"></script>
   </body>
 </html>
